[ Update ]：Add auth type
