# packages/stephenchen/core/src/Base/BaseController.php
@@ -11,19 +11,27 @@ use Illuminate\Routing\Controller;
 /**
  * @OA\Info(
  *     title="後端專案",
- *     description="後端專案專用的 ＡＰＩ 文件",
+ *     description="後端專案專用的 ＡＰＩ 文件, 請先透過 auth 中的 login 登入拿到 token
+ *     在到右邊的 Authorize 中設定，方可使用所有有鎖頭的 api
+ *     ",
  *     version="1.0",
  *     @OA\Contact(
- *         name="",
+ *         name="stephen chen",
  *         email="tasb00429@gmail.com"
  *     ),
+ *     @OA\License(
+ *         name="Apache 2.0",
+ *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
+ *     )
  * )
  */
+
 /**
+ *
  * @OA\SecurityScheme(
  *     type="http",
  *     description="Login with email and password to get the authentication token",
- *     name="Token based Based",
+ *     name="Authorization",
  *     in="header",
  *     scheme="bearer",
  *     bearerFormat="JWT",
